auth/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: keycloak
  namespace: lamassu-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: haritz/lamassu-auth:1.0
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
