auth/keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: lamassu-ns
spec:
  ports:
  - name: keycloak-8080
    port: 8080
  type: ClusterIP
  selector:
    app: keycloak
